@@ -1,3 +1,11 @@
+2000-05-31  Eric Melski  <ericm@scriptics.com>
+
+	* library/bgerror.tcl: Improved bgerror based on work by Donal
+	K. Fellows; no longer dependant on tk_dialog; features a
+	Windows-esque "Details" button, and a customizable extra function
+	button that allows the user to (for example) save the stack trace
+	to a file.
+
 2000-05-30  Eric Melski  <ericm@scriptics.com>
 
 	* generic/tkImgGIF.c: Changed defines for GIF87a/GIF89a to be
